# maglib_inventory

./: .gitignore  CMakeLists.txt  Doxyfile.in  README
include/: DirectInventoryItem.h  FixedInventory.h  InventoryItemInterface.h  InventoryItemPointerAdapter.h  ItemLayouts.h  PointerInventoryItem.h  dynamic_inv.h  fixed_inventory.h  fixed_size_inv.h  has_method.h  inv_cell.h  inv_pointer_adapter.h  mag_assert.h  managed_pointer.h  mtypes.h  t_iterator.h
lib/: CMakeLists.txt  FixedInventory.cpp  fixed_inventory.cpp
test/: CMakeLists.txt  main.cpp
